# raytracer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Interval.cpp  Interval.hpp  Lambertian.hpp  Light.hpp  Material.hpp  Matrix.hpp  Mesh.hpp  MeshList.hpp  Metal.hpp  Object.cpp  Object.hpp  Ray.cpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  Targetable.hpp  ThreadManager.hpp  Utils.hpp  Vec3.cpp  Vec3.hpp  Viewport.cpp  Viewport.hpp  World.hpp
